--- a/SKUPINA_1_01NAEX_HW01_pulse.ipynb
+++ b/SKUPINA_1_01NAEX_HW01_pulse.ipynb
@@ -227,6 +227,7 @@
         "data %>% ggplot(aes(x=operator, y=tep, fill=operator)) + \n",
         "          geom_boxplot() + \n",
         "          stat_summary(fun=\"mean\", size=1, color='purple') + \n",
+        "          geom_jitter(color=\"black\", size=0.9, alpha=0.5) +\n",
         "          theme(legend.position=\"none\")\n",
         "          #geom_point(size=3, shape=16, color='red')"
       ],
@@ -242,6 +243,7 @@
         "data %>% ggplot(aes(x=cvik, y=tep, fill=cvik)) + \n",
         "          geom_boxplot() + \n",
         "          stat_summary(fun=\"mean\", size=1, color='purple') +\n",
+        "          geom_jitter(color=\"black\", size=0.9, alpha=0.5) +\n",
         "          theme(legend.position=\"none\")"
       ],
       "metadata": {
@@ -256,6 +258,7 @@
         "data %>% ggplot(aes(x=iterace, y=tep, fill=iterace)) + \n",
         "          geom_boxplot() + \n",
         "          stat_summary(fun=\"mean\", size=1, color='purple') +\n",
+        "          geom_jitter(color=\"black\", size=0.9, alpha=0.5) +\n",
         "          theme(legend.position=\"none\")"
       ],
       "metadata": {
