--- a/SKUPINA_1_01NAEX_HW01_pulse.ipynb
+++ b/SKUPINA_1_01NAEX_HW01_pulse.ipynb
@@ -224,7 +224,8 @@
     {
       "cell_type": "code",
       "source": [
-        "data %>% ggplot(aes(x=operator, y=tep, fill=operator)) + \n",
+        "data %>%  \n",
+        "          ggplot(aes(x=operator, y=tep, fill=operator)) + \n",
         "          geom_boxplot() + \n",
         "          stat_summary(fun=\"mean\", size=1, color='purple') + \n",
         "          geom_jitter(color=\"black\", size=0.9, alpha=0.5) +\n",
@@ -253,6 +254,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Intercation plots"
+      ],
+      "metadata": {
+        "id": "KsJhWBAu-2zN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "data %>% ggplot(aes(x=iterace, y=tep, fill=iterace)) + \n",
@@ -266,6 +276,120 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data %>% \n",
+        "  group_by(operator, cvik) %>% \n",
+        "  summarise(mean_tep = mean(tep)) %>%\n",
+        "  ggplot() +\n",
+        "  aes(x = operator, y = mean_tep, color = cvik) +\n",
+        "  geom_line(aes(group = cvik)) +\n",
+        "  geom_point() +\n",
+        "  labs(title=\"Interaction plot [operator|cvik]\", size=10)"
+      ],
+      "metadata": {
+        "id": "EI5HZ7C2AKK_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data %>% \n",
+        "  group_by(operator, iterace) %>% \n",
+        "  summarise(mean_tep = mean(tep)) %>%\n",
+        "  ggplot() +\n",
+        "  aes(x = operator, y = mean_tep, color = iterace) +\n",
+        "  geom_line(aes(group = iterace)) +\n",
+        "  geom_point() +\n",
+        "  labs(title=\"Interaction plot [operator|iterace]\", size=10)"
+      ],
+      "metadata": {
+        "id": "nQbaWuLpBXjn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data %>% \n",
+        "  group_by(cvik, iterace) %>% \n",
+        "  summarise(mean_tep = mean(tep)) %>%\n",
+        "  ggplot() +\n",
+        "  aes(x = cvik, y = mean_tep, color = iterace) +\n",
+        "  geom_line(aes(group = iterace)) +\n",
+        "  geom_point() +\n",
+        "  labs(title=\"Interaction plot [cvik|iterace]\", size=10)"
+      ],
+      "metadata": {
+        "id": "FRqoWZxxBhdz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data %>% \n",
+        "  group_by(operator) %>% \n",
+        "  summarise(mean_tep = mean(tep)) %>%\n",
+        "  ggplot(aes(x = operator, y = mean_tep, group=1, color=operator)) +\n",
+        "  geom_line() +\n",
+        "  geom_point() +\n",
+        "  labs(title=\"Effect plot\", size=10)"
+      ],
+      "metadata": {
+        "id": "tAghAoCCIhKT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data %>% \n",
+        "  group_by(cvik) %>% \n",
+        "  summarise(mean_tep = mean(tep)) %>%\n",
+        "  ggplot(aes(x = cvik, y = mean_tep, group=1, color=cvik)) +\n",
+        "  geom_line() +\n",
+        "  geom_point() +\n",
+        "  labs(title=\"Effect plot\", size=10)"
+      ],
+      "metadata": {
+        "id": "AEiaaeQPLLp2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data %>% \n",
+        "  group_by(iterace) %>% \n",
+        "  summarise(mean_tep = mean(tep)) %>%\n",
+        "  ggplot(aes(x = iterace, y = mean_tep, group=1, color=iterace)) +\n",
+        "  geom_line() +\n",
+        "  geom_point() +\n",
+        "  labs(title=\"Effect plot\", size=10)"
+      ],
+      "metadata": {
+        "id": "nZ0nXfuqLQm9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "HERE COMES THE POPIS"
+      ],
+      "metadata": {
+        "id": "dnV63V2aLc7d"
+      }
     },
     {
       "cell_type": "markdown",
