--- a/Protokol_EF.ipynb
+++ b/Protokol_EF.ipynb
@@ -1672,12 +1672,12 @@
         "B"
       ],
       "metadata": {
-        "id": "hxeScd7V9hC_",
-        "outputId": "be2b0b81-9b6e-49e2-d0c8-554200365537",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
-        }
+        },
+        "id": "hxeScd7V9hC_",
+        "outputId": "be2b0b81-9b6e-49e2-d0c8-554200365537"
       },
       "execution_count": 34,
       "outputs": [
@@ -1924,13 +1924,13 @@
       ],
       "metadata": {
         "id": "zckK9-h-CFUy",
-        "outputId": "020e0540-76a0-4481-cc41-326df9dd7ba9",
+        "outputId": "73d9f9de-5f29-46b3-8d9a-79303e6666e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 147
         }
       },
-      "execution_count": 24,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1943,15 +1943,15 @@
               "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><td>1.695226</td><td>-0.3633488</td><td>4.757885</td><td>0.164438</td><td>0.8606678</td></tr>\n",
+              "\t<tr><td>0.8509476</td><td>0.2304441</td><td>-0.04055383</td><td>-0.9203648</td><td>2.439051</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
-            "text/markdown": "\nA data.frame: 1 × 5\n\n| colsample_bytree &lt;dbl&gt; | colsample_bynode &lt;dbl&gt; | subsample &lt;dbl&gt; | max_depth &lt;dbl&gt; | n_estimators &lt;dbl&gt; |\n|---|---|---|---|---|\n| 1.695226 | -0.3633488 | 4.757885 | 0.164438 | 0.8606678 |\n\n",
-            "text/latex": "A data.frame: 1 × 5\n\\begin{tabular}{lllll}\n colsample\\_bytree & colsample\\_bynode & subsample & max\\_depth & n\\_estimators\\\\\n <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n\\hline\n\t 1.695226 & -0.3633488 & 4.757885 & 0.164438 & 0.8606678\\\\\n\\end{tabular}\n",
+            "text/markdown": "\nA data.frame: 1 × 5\n\n| colsample_bytree &lt;dbl&gt; | colsample_bynode &lt;dbl&gt; | subsample &lt;dbl&gt; | max_depth &lt;dbl&gt; | n_estimators &lt;dbl&gt; |\n|---|---|---|---|---|\n| 0.8509476 | 0.2304441 | -0.04055383 | -0.9203648 | 2.439051 |\n\n",
+            "text/latex": "A data.frame: 1 × 5\n\\begin{tabular}{lllll}\n colsample\\_bytree & colsample\\_bynode & subsample & max\\_depth & n\\_estimators\\\\\n <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n\\hline\n\t 0.8509476 & 0.2304441 & -0.04055383 & -0.9203648 & 2.439051\\\\\n\\end{tabular}\n",
             "text/plain": [
-              "  colsample_bytree colsample_bynode subsample max_depth n_estimators\n",
-              "1 1.695226         -0.3633488       4.757885  0.164438  0.8606678   "
+              "  colsample_bytree colsample_bynode subsample   max_depth  n_estimators\n",
+              "1 0.8509476        0.2304441        -0.04055383 -0.9203648 2.439051    "
             ]
           },
           "metadata": {}
@@ -1960,18 +1960,35 @@
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<strong>1:</strong> 32038.1429487397"
+              "<strong>1:</strong> 57010.8672840989"
             ],
-            "text/markdown": "**1:** 32038.1429487397",
-            "text/latex": "\\textbf{1:} 32038.1429487397",
+            "text/markdown": "**1:** 57010.8672840989",
+            "text/latex": "\\textbf{1:} 57010.8672840989",
             "text/plain": [
               "       1 \n",
-              "32038.14 "
+              "57010.87 "
             ]
           },
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Randomized search \n",
+        "\n",
+        "s 25K iteráciami (z 315K možných) našiel najlepšiu podmnožinu hyperparametrov ()ako\n",
+        "\n",
+        "- `colsample_bytree = 1.0`\n",
+        "- `colsample_bynode =\t0.95`\n",
+        "- `subsample = 0.5`\n",
+        "- `max_depth=6`\n",
+        "- `n_estimators=600`"
+      ],
+      "metadata": {
+        "id": "m_CdbYIaGJFa"
+      }
     },
     {
       "cell_type": "markdown",
